--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# --- CHIME-specific additions (Firebase, Supabase, local dev) ---
+.vscode/
+.DS_Store
+.idea/
+
+# Firebase
+.firebase/
+.firebaserc
+
+# Supabase
+.supabase/
+supabase/.temp/
+supabase/migrations/
